--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">Clinitick</string>
 
+    <string name="snack_bar_text">مورد حذف گردید</string>
+
+    <string name="snack_bar_undo">بازگردانی</string>
+
     <string-array name="finance_type">
         <item></item>
         <item>خرج</item>
